# twittergov

./: .gitignore  README.md  node.tf
twittergov-parachain/: Cargo.toml  README.md
twittergov-parachain/runtime/: Cargo.toml
twittergov-parachain/runtime/src/: lib.rs  voting.rs
twittergov-parachain/runtime/wasm/: Cargo.toml  build.sh
twittergov-parachain/runtime/wasm/src/: lib.rs
twittergov-parachain/src/: chain_spec.rs  main.rs  service.rs
