[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'twittergov-parachain-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[features]
default = []
std = ['twittergov-parachain-runtime/std']
[dependencies.twittergov-parachain-runtime]
default-features = false
path = '..'
